# recipes-graph

./: CHANGELOG.md  Diet-Gluten.html  Diet-Kitchen-(Meat,Asian).html  Diet-Kitchen-(Meat,Central_European).html  Diet-Kitchen-(Meat,Italian).html  Diet-Kitchen-(Meat,Mexican).html  Diet-Kitchen-(Vegan,Asian).html  Diet-Kitchen-(Vegetarian,Central_European).html  Diet-Kitchen-(Vegetarian,French).html  Diet-Kitchen-(Vegetarian,Italian).html  Diet-Kitchen-(Vegetarian,Middle_Eastern).html  Diet-Kitchen-Meal-(Meat,(Central_European,Dinner)).html  Diet-Kitchen-Meal-(Meat,(Central_European,Lunch)).html  Diet-Kitchen-Meal-(Meat,(Italian,Dinner)).html  Diet-Kitchen-Meal-(Meat,(Italian,Lunch)).html  Diet-Kitchen-Meal-(Vegan,(Asian,Dinner)).html  Diet-Kitchen-Meal-(Vegan,(Asian,Lunch)).html  Diet-Kitchen-Meal-(Vegan,(Asian,Side)).html  Diet-Kitchen-Meal-(Vegan,(Mexican,Lunch)).html  Diet-Kitchen-Meal-(Vegetarian,(Asian,Lunch)).html  Diet-Kitchen-Meal-(Vegetarian,(French,Dinner)).html  Diet-Kitchen-Meal-(Vegetarian,(Greek,Dinner)).html  Diet-Kitchen-Meal-(Vegetarian,(Italian,Lunch)).html  Diet-Kitchen-Meal-(Vegetarian,(Mexican,Lunch)).html  Diet-Kitchen-Meal-(Vegetarian,(Middle_Eastern,Lunch)).html  Diet-Kitchen-Meal-Gluten-Indian-Breakfast.html  Diet-Kitchen-Meal-Gluten-Northern_European-Lunch.html  Diet-Kitchen-Meal-Meat-American-Picnic.html  Diet-Kitchen-Meal-Meat-Asian-Dinner.html  Diet-Kitchen-Meal-Meat-Asian-Lunch.html  Diet-Kitchen-Meal-Meat-Central_European-Dinner.html  Diet-Kitchen-Meal-Meat-Central_European-Lunch.html  Diet-Kitchen-Meal-Meat-Central_European-Side.html  (+206 more)
app/: Main.hs
data/: script.js  (+2 more)
(+6 files in other folders)
